Address eForm PDF review findings
Signed-off-by: Ben Heerema <ben@maplecreekmedical.ca>